--- a/config
+++ b/config
@@ -1,4 +1,5 @@
 #ANDROID_SDK_SRC=/home/dsns/dsns/sdk-source_5.1.1_r1
 #ANDROID_SDK_SRC=/home/chchao/aosp/android-6.0.0_r1
-ANDROID_SDK_SRC=/home/hsucw/sdk-source_5.1.1_r1
+#ANDROID_SDK_SRC=/home/hsucw/sdk-source_5.1.1_r1
+ANDROID_SDK_SRC=/media/android/source-5.1.1_r1
 #VERSION=android-5.1.1_r1
